[package]
name = "worksheet_helper"
version = "0.1.0"
authors = ["mrcopperbeard <mrcoperbeard@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5"
lazy_static = "1.4"
base64 = "0.13.0"